@@ -88,6 +88,7 @@
  *  - Retrode, a USB Games Console Cartridge Reader: http://www.retrode.org
  *  - USBTINY-MKII, an AVRISP-MKII Clone AVR Programmer: http://tom-itx.dyndns.org:81/~webpage/boards/USBTiny_Mkii/USBTiny_Mkii_index.php
  *  - XMEGA Development Board, using LUFA as an On-Board Programmer: http://xmega.mattair.net/
+ *  - Zeptoprog, a multifunction AVR programmer: http://www.mattairtech.com/index.php/featured/zeptoprog.html
  *
  *  \section Sec_LUFAPublications Publications Mentioning LUFA
  *  - Elektor Magazine, "My First AVR-USB" by Antoine Authier (feature), January 2010 Issue
